@@ -21,6 +21,8 @@
 * Update - Bump minimum supported version of WooCommerce from 5.4 to 5.5.
 * Update - Bump minimum required version of WooCommerce from 4.0 to 4.4.
 * Fix - Add credit card on My Account using other payment gateways does not show "Your card number is incomplete" error
+* Update - Continue loading WCPay if the account is connected.
+* Add - Message to suggest using the previous version of WooCommerce Payments for old Woo core versions.
 
 = 3.0.0 - 2021-09-16 =
 * Add - Download deposits report in CSV.
